tests/baselines/reference/thisInObjectLiterals.errors.txt
tests/cases/conformance/expressions/thisKeyword/thisInObjectLiterals.ts(14,5): error TS7023: 'f' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
tests/cases/conformance/expressions/thisKeyword/thisInObjectLiterals.ts(15,21): error TS2339: Property 'spaaace' does not exist on type '{ f(): any; }'.


==== tests/cases/conformance/expressions/thisKeyword/thisInObjectLiterals.ts (2 errors) ====
    class MyClass {
        t: number;
    
        fn() {
            type ContainingThis = this;
            //type of 'this' in an object literal is the containing scope's this
            var t = { x: this, y: this.t };
            var t: { x: ContainingThis; y: number };
        }
    }
    
    //type of 'this' in an object literal method is the type of the object literal
    var obj = {
        f() {
        ~
!!! error TS7023: 'f' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
            return this.spaaace;
                        ~~~~~~~
!!! error TS2339: Property 'spaaace' does not exist on type '{ f(): any; }'.
        }
    };
    var obj: { f: () => any; };
    